@@ -29,56 +29,6 @@ constexpr inline auto const iterator_identity{
   [](decltype(*std::declval<ITERATOR>()) x) { return x; }};
 
 
-/// @deprecated Use @ref params instead.
-template<typename IT, typename ACCESSOR = decltype(iterator_identity<IT>)>
-class dynamic_params
-{
-public:
-  /// Wrap a sequence of pointers or iterators.
-  constexpr dynamic_params(IT begin, IT end) :
-          m_begin(begin), m_end(end), m_accessor(iterator_identity<IT>)
-  {}
-
-  /// Wrap a sequence of pointers or iterators.
-  /** This version takes an accessor callable.  If you pass an accessor `acc`,
-   * then any parameter `p` will go into the statement's parameter list as
-   * `acc(p)`.
-   */
-  constexpr dynamic_params(IT begin, IT end, ACCESSOR &acc) :
-          m_begin(begin), m_end(end), m_accessor(acc)
-  {}
-
-  /// Wrap a container.
-  template<typename C>
-  explicit constexpr dynamic_params(C &container) :
-          dynamic_params(std::begin(container), std::end(container))
-  {}
-
-  /// Wrap a container.
-  /** This version takes an accessor callable.  If you pass an accessor `acc`,
-   * then any parameter `p` will go into the statement's parameter list as
-   * `acc(p)`.
-   */
-  template<typename C>
-  explicit constexpr dynamic_params(C &container, ACCESSOR &acc) :
-          dynamic_params(std::begin(container), std::end(container), acc)
-  {}
-
-  constexpr IT begin() const noexcept { return m_begin; }
-  constexpr IT end() const noexcept { return m_end; }
-
-  constexpr auto access(decltype(*std::declval<IT>()) value) const
-    -> decltype(std::declval<ACCESSOR>()(value))
-  {
-    return m_accessor(value);
-  }
-
-private:
-  IT const m_begin, m_end;
-  ACCESSOR m_accessor = iterator_identity<IT>;
-};
-
-
 /// Internal type: encode statement parameters.
 /** Compiles arguments for prepared statements and parameterised queries into
  * a format that can be passed into libpq.
